--- a/mkdir-Question1/index.html
+++ b/mkdir-Question1/index.html
@@ -1,13 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="React Stock Tracker App" />
+    <title>📈 Stock Tracker</title>
+    <link rel="icon" href="https://emojiapi.dev/api/v1/chart_increasing/64.png" />
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- For Vite: main.jsx should be your entry point -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
